# docs/swagger.json
@@ -8,6 +8,11 @@
     "paths": {
         "/courier": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "post new courier",
                 "consumes": [
                     "application/json"
@@ -54,6 +59,11 @@
         },
         "/courier/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get courier by ID",
                 "consumes": [
                     "application/json"
@@ -96,6 +106,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "put courier status by courier ID",
                 "consumes": [
                     "application/json"
@@ -140,6 +155,11 @@
         },
         "/couriers": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get all couriers",
                 "consumes": [
                     "application/json"
@@ -175,6 +195,11 @@
         },
         "/deliveryservice": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get list of all delivery service",
                 "produces": [
                     "application/json"
@@ -205,6 +230,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "create a Delivery Service",
                 "consumes": [
                     "application/json"
@@ -253,6 +283,11 @@
         },
         "/deliveryservice/logo": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "set logo to DO Spaces and it's way to DB",
                 "consumes": [
                     "image/jpeg"
@@ -295,6 +330,11 @@
         },
         "/deliveryservice/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get delivery service by id",
                 "produces": [
                     "application/json"
@@ -334,6 +374,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "update delivery service information",
                 "consumes": [
                     "application/json"
@@ -379,6 +424,11 @@
         },
         "/order/detailed/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get detailed order by id",
                 "produces": [
                     "application/json"
@@ -420,6 +470,11 @@
         },
         "/order/status_change/{id}": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "put order status by order ID",
                 "consumes": [
                     "application/json"
@@ -473,6 +528,11 @@
         },
         "/order/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get orders by order ID",
                 "consumes": [
                     "application/json"
@@ -517,6 +577,11 @@
         },
         "/orders": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get list of all orders by courier service id",
                 "produces": [
                     "application/json"
@@ -572,6 +637,11 @@
         },
         "/orders/bymonth": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get list of completed orders by courier id sorted by month",
                 "produces": [
                     "application/json"
@@ -641,6 +711,11 @@
         },
         "/orders/completed": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get list of completed orders by courier id",
                 "produces": [
                     "application/json"
@@ -696,6 +771,11 @@
         },
         "/orders/service/completed": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get list of completed orders by courier service id",
                 "produces": [
                     "application/json"
@@ -757,6 +837,11 @@
         },
         "/orders/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get orders by courier ID",
                 "consumes": [
                     "application/json"
@@ -799,6 +884,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "assign order to courier",
                 "consumes": [
                     "application/json"
